--- a/Instafilter/Info.plist
+++ b/Instafilter/Info.plist
@@ -60,5 +60,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Allow adding edited photos to gallery</string>
 </dict>
 </plist>
